# xml-to-json-poc

./: Cargo.toml  README.md
src/: cbus_event_state.rs  fcu_module_data.rs  lib.rs  main.rs
static/: ThePlankMkII.xml
tests/: xml_to_json_test.rs
