[package]
name = "xml-to-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
error = "0.1.9"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.120"
simple_logger = "5.0.0"
time = "0.3.36"
